# vibrography-noise-reduction

./: .gitignore  CMakeLists.txt  aruco_homography.cpp  blade_tracker.py  blade_tracker_sam2.py  dic_analysis.cu  extract_frames.sh  phase_stabilizer.cpp  pick_prompts.py  ransac_stabilizer.cpp  render_overlay.py  requirements.txt  rl_stabilizer.cpp  synthetic_frame.py
rl_stabilizer/: requirements.txt
rl_stabilizer/configs/: default.yaml
rl_stabilizer/deployment/: export_onnx.py  rl_policy_inference.hpp
rl_stabilizer/envs/: __init__.py  flow_stabilizer_env.py  stabilizer_env.py
rl_stabilizer/evaluation/: benchmark.py  kalman_baseline.py
rl_stabilizer/training/: analyze_real_data.py  train_sac.py
